--- a/index.html
+++ b/index.html
@@ -3238,10 +3238,10 @@
     <div id="historyPanel" class="history-panel">
         <div class="history-header">
             <div class="header-left">
-                <h2>貸款計算歷史記錄</h2>
+                <h2>歷史記錄</h2>
             </div>
             <div class="header-right">
-                <button id="compareSelectedBtn" class="compare-selected-btn" onclick="compareSelectedLoans()" disabled>比較已選項目</button>
+                <button id="compareSelectedBtn" class="compare-selected-btn" onclick="compareSelectedLoans()" disabled>比較勾選</button>
                 <button class="delete-all-btn" onclick="confirmDeleteAll()">全部刪除</button>
             </div>
             <button class="close-btn" onclick="toggleHistoryPanel()">×</button>
@@ -7040,7 +7040,7 @@
                     語言 <span class="menu-item-arrow">▶</span>
                 </li>
             </ul>
-            <div class="version-info">v2.61</div>
+            <div class="version-info">v2.63</div>
         </div>
     </div>
 
